log
Fri 19 Aug 2022 01:08:29 PM UTC: 
 tests:  0|6
total_score: 0/70
92e616a
Fri 19 Aug 2022 01:12:45 PM UTC: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:36:10: error: ‘lst’ undeclared (first use in this function); did you mean ‘list’?
   36 |   return lst;
      |          ^~~
      |          list
list.c:36:10: note: each undeclared identifier is reported only once for each function it appears in
list.c:37:1: error: control reaches end of non-void function [-Werror=return-type]
   37 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
2a844f8
Fri 19 Aug 2022 01:12:59 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
354ac51
Sun 21 Aug 2022 03:09:53 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
6c1df8a
Sun 21 Aug 2022 03:14:55 PM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:40:15: error: ‘head’ undeclared (first use in this function)
   40 |   firstList = head->list;
      |               ^~~~
list.c:40:15: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
72c9719
Sun 21 Aug 2022 03:18:24 PM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
68e888f
Sun 21 Aug 2022 03:19:39 PM UTC: 
 list.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:40:3: error: ‘current’ undeclared (first use in this function); did you mean ‘popCurrent’?
   40 |   current = list->head;
      |   ^~~~~~~
      |   popCurrent
list.c:40:3: note: each undeclared identifier is reported only once for each function it appears in
list.c:43:1: error: control reaches end of non-void function [-Werror=return-type]
   43 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
1bc14c8
Sun 21 Aug 2022 03:19:53 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:40:17: error: initialization of ‘int’ from ‘Node *’ makes integer from pointer without a cast [-Werror=int-conversion]
   40 |   int current = list->head;
      |                 ^~~~
list.c:41:10: error: returning ‘int’ from a function with return type ‘void *’ makes pointer from integer without a cast [-Werror=int-conversion]
   41 |   return current;
      |          ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
5b6bbf6
Sun 21 Aug 2022 03:24:32 PM UTC: 
 list.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  2|5
total_score: 15/70
05cad69
Sun 21 Aug 2022 03:36:03 PM UTC: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:48:23: error: ‘List’ {aka ‘struct List’} has no member named ‘next’
   48 |   list->current = list->next;
      |                       ^~
list.c:49:31: error: expected ‘;’ before ‘}’ token
   49 |   return (list->current->next)
      |                               ^
      |                               ;
   50 | }
      | ~                              
Compilation failed
fc9b0db
Sun 21 Aug 2022 03:36:19 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:48:23: error: ‘List’ {aka ‘struct List’} has no member named ‘next’
   48 |   list->current = list->next;
      |                       ^~
Compilation failed
dd52203
